# SpacedOut

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE-CC  LICENSE-MIT  NOTICE  vcpkg.json
engine/: CMakeLists.txt
engine/src/: main.cpp  world.cpp
engine/src/core/: event_bus.cpp  event_bus.hpp
engine/src/models/: artifact.cpp  artifact.hpp  base.hpp  celestial_bodies.cpp  celestial_bodies.hpp  spaceship.cpp  spaceship.hpp  wormhole.cpp  wormhole.hpp
engine/src/physics/: gravity_engine.cpp  gravity_engine.hpp  orbits.cpp  orbits.hpp  relativity_engine.hpp  trajectory.hpp  world_query.hpp  world_storage.cpp  world_storage.hpp
engine/src/utils/: helpers.hpp  math.hpp  types.hpp
engine/src/world/: gravity_engine.cpp  gravity_engine.hpp  orbits.cpp  orbits.hpp  relativity_engine.cpp  relativity_engine.hpp  trajectory.cpp  world_query.cpp  world_query.hpp  world_storage.hpp
engine/tests/: test_artifact.cpp  test_celestial_bodies.cpp  test_spaceship.cpp  test_world_query.cpp  test_world_storage.cpp  test_wormhole.cpp
